--- a/src/components/welcome/Welcome.module.scss
+++ b/src/components/welcome/Welcome.module.scss
@@ -56,6 +56,7 @@
 @media (max-width: 1200px) {
     .welcome {
         gap: 0rem 2.25rem;
+
         &__title {
             @include fontSize32px();
         }
@@ -76,7 +77,7 @@
 
 @media (max-width: 768px) {
     .welcome {
-        min-height: auto;
+        align-items: flex-start;
 
         &__greeting {
             display: none;
